<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgwhite">

    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone" />
    <LinearLayout
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="2">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight=".15">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:weightSum="7">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:layout_weight="1.03">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_centerInParent="true"
                        android:layout_gravity="center"
                        android:fontFamily="@font/handlee"
                        android:gravity="center"
                        android:text="@string/reservation_page"
                        android:textColor="@color/colorPrimary"
                        android:textSize="18sp" />
                </RelativeLayout>

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="match_parent"
                    android:layout_height="110dp"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="15dp"
                    android:layout_marginBottom="15dp"
                    android:layout_weight="1"
                    android:background="@null"
                    app:cardBackgroundColor="@android:color/transparent"
                    app:cardElevation="0dp"
                    app:cardMaxElevation="0dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/start_dateT"
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:layout_gravity="center"
                                android:layout_weight="1"
                                android:fontFamily="@font/handlee"
                                android:gravity="center"
                                android:text="@string/reservation_start_date"
                                android:textColor="@color/primary_text"
                                android:textSize="16sp" />

                            <TextView
                                android:id="@+id/start_date"
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:layout_gravity="center"
                                android:layout_weight="1"
                                android:fontFamily="@font/handlee"
                                android:gravity="center"
                                android:text="@string/date_example"
                                android:textColor="@color/primary_text"
                                android:textSize="15sp" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_weight=".5"
                            android:gravity="center"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/days"
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:text="@string/day"
                                android:textColor="@color/colorPrimaryDark"
                                android:textSize="14sp" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/end_dateT"
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:layout_gravity="center"
                                android:layout_weight="1"
                                android:fontFamily="@font/handlee"
                                android:gravity="center"
                                android:text="@string/reservation_end_date"
                                android:textColor="@color/primary_text"
                                android:textSize="16sp" />

                            <TextView
                                android:id="@+id/end_date"
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:layout_gravity="center"
                                android:layout_weight="1"
                                android:fontFamily="@font/handlee"
                                android:gravity="center"
                                android:text="@string/date_example"
                                android:textColor="@color/primary_text"
                                android:textSize="15sp" />


                        </LinearLayout>

                    </LinearLayout>
                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="match_parent"

                    android:layout_height="70dp"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="15dp"
                    android:layout_marginBottom="5dp"
                    android:layout_weight=".99"
                    app:cardBackgroundColor="@color/editboxbg"
                    app:cardCornerRadius="8dp"
                    app:cardElevation="0dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <com.rengwuxian.materialedittext.MaterialEditText
                            android:id="@+id/reserver_name"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_gravity="center"
                            android:layout_marginTop="5dp"
                            android:layout_marginBottom="5dp"
                            android:layout_weight="1"
                            android:background="@color/editboxbg"
                            android:fontFamily="@font/handlee"
                            android:gravity="center"
                            android:hint="@string/name"
                            android:inputType="text"
                            android:paddingStart="10dp"
                            android:paddingEnd="10dp"
                            android:textSize="14sp" />
                    </RelativeLayout>
                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="15dp"
                    android:layout_marginBottom="5dp"
                    android:layout_weight=".99"
                    app:cardBackgroundColor="@color/editboxbg"
                    app:cardCornerRadius="8dp"
                    app:cardElevation="0dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <com.rengwuxian.materialedittext.MaterialEditText
                            android:id="@+id/phone"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_gravity="center"
                            android:layout_marginTop="5dp"
                            android:layout_marginBottom="5dp"
                            android:layout_weight="1"
                            android:background="@color/editboxbg"
                            android:fontFamily="@font/handlee"
                            android:gravity="center"
                            android:hint="@string/phone"
                            android:inputType="phone"
                            android:paddingStart="10dp"
                            android:paddingEnd="10dp"
                            android:textSize="14sp" />
                    </RelativeLayout>
                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="15dp"
                    android:layout_marginBottom="5dp"
                    android:layout_weight=".99"
                    app:cardBackgroundColor="@color/editboxbg"
                    app:cardCornerRadius="8dp"
                    app:cardElevation="0dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"
                        android:weightSum="2">

                        <com.rengwuxian.materialedittext.MaterialEditText
                            android:id="@+id/price"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_gravity="center"
                            android:layout_marginTop="5dp"
                            android:layout_marginBottom="5dp"
                            android:layout_weight=".7"
                            android:background="@color/editboxbg"
                            android:fontFamily="@font/handlee"
                            android:gravity="center"
                            android:hint="@string/priceV"
                            android:inputType="text|phone"
                            android:paddingStart="10dp"
                            android:paddingEnd="10dp"
                            android:textSize="14sp" />

                        <Spinner
                            android:id="@+id/period_type"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginStart="10dp"
                            android:layout_marginEnd="10dp"
                            android:layout_weight="1.3"
                            android:fontFamily="@font/handlee"
                            android:hint="@string/period"
                            android:inputType=""
                            android:singleLine="true"
                            android:textSize="14sp"
                            app:met_baseColor="@color/primary_text"
                            app:met_floatingLabel="highlight"
                            app:met_primaryColor="@color/colorPrimaryDark"
                            tools:ignore="MissingPrefix" />
                    </LinearLayout>
                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="match_parent"

                    android:layout_height="130dp"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="15dp"
                    android:layout_marginBottom="5dp"
                    android:layout_weight=".99"
                    app:cardBackgroundColor="@color/editboxbg"
                    app:cardCornerRadius="8dp"
                    app:cardElevation="0dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <com.rengwuxian.materialedittext.MaterialEditText
                            android:id="@+id/reserver_note"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_gravity="center"
                            android:layout_marginTop="5dp"
                            android:layout_marginBottom="5dp"
                            android:background="@color/editboxbg"
                            android:fontFamily="@font/handlee"
                            android:gravity="center"
                            android:hint="@string/note"
                            android:inputType="textMultiLine"
                            android:lines="3"
                            android:paddingStart="10dp"
                            android:paddingEnd="10dp"
                            android:textSize="14sp" />
                    </RelativeLayout>
                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="15dp"
                    android:layout_marginBottom="5dp"
                    android:layout_weight=".99"
                    app:cardCornerRadius="8dp"
                    app:cardElevation="0dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:fontFamily="@font/handlee"
                            android:gravity="center"
                            android:text="@string/total_price"
                            android:textSize="18sp" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1">

                            <TextView
                                android:id="@+id/total_price"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_weight="1"
                                android:fontFamily="@font/handlee"
                                android:gravity="center"
                                android:paddingStart="10dp"
                                android:paddingEnd="10dp"
                                android:text="0"
                                android:textColor="@color/primary_text"
                                android:textSize="16sp" />
                        </LinearLayout>
                    </LinearLayout>

                </com.google.android.material.card.MaterialCardView>


            </LinearLayout>
        </ScrollView>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1.85">

            <Button
                android:id="@+id/reserve"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:background="@drawable/gradian_background"
                android:fontFamily="@font/handlee"
                android:text="@string/reserve"
                android:textColor="@color/white"
                android:textSize="14sp" />
        </RelativeLayout>
    </LinearLayout>
</RelativeLayout>
