<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgwhite">

    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="5"
        tools:context=".Login">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight=".75">

            <ImageView
                android:layout_width="200dp"
                android:layout_height="140dp"
                android:layout_centerInParent="true"
                android:src="@drawable/logo" />
        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight=".9"
            android:fontFamily="@font/handlee"
            android:gravity="center"
            android:text="@string/login"
            android:textColor="@color/colorPrimary"
            android:textSize="30sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight=".9"
            android:orientation="horizontal"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:weightSum="2">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:src="@drawable/user"
                tools:srcCompat="@drawable/user" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal"
                android:paddingStart="5dp"
                android:paddingEnd="5dp">

                <EditText
                    android:id="@+id/username"
                    android:layout_width="match_parent"
                    android:layout_height="51dp"
                    android:fontFamily="@font/handlee"
                    android:gravity="center"
                    android:hint="@string/username"
                    android:inputType="text"
                    android:paddingStart="10dp"
                    android:paddingLeft="10dp"
                    android:paddingEnd="10dp"
                    android:shadowColor="@color/primary_text"
                    android:singleLine="true"
                    android:soundEffectsEnabled="true"
                    android:textColor="@color/primary_text"
                    android:textColorHint="@color/secondary_text"
                    android:visibility="visible" />

            </LinearLayout>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight=".9"
            android:orientation="horizontal"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:weightSum="3">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_lock"
                tools:srcCompat="@drawable/ic_lock" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="2.6"
                android:orientation="horizontal"
                android:paddingStart="11dp"
                android:paddingEnd="11dp">

                <EditText
                    android:id="@+id/password2"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:fontFamily="@font/handlee"
                    android:gravity="center"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:layoutDirection="rtl"
                    android:textSize="16sp" />
            </LinearLayout>

            <ImageView
                android:id="@+id/show_pass_btn"
                android:layout_width="wrap_content"
                android:layout_height="25dp"
                android:layout_gravity="center"
                android:layout_weight=".4"
                android:alpha=".5"
                app:srcCompat="@drawable/eye_off" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight=".85"
            android:paddingStart="25dp"
            android:paddingEnd="25dp"
            android:visibility="invisible">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/handlee"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="12sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight=".93"
            android:paddingStart="40dp"
            android:paddingEnd="40dp">

            <Button
                android:id="@+id/login"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/gradian_background"
                android:fontFamily="@font/handlee"
                android:text="@string/login"
                android:textColor="@color/white" />
        </RelativeLayout>

    </LinearLayout>
</RelativeLayout>